--- a/public/css/dashboard/style.css
+++ b/public/css/dashboard/style.css
@@ -57,7 +57,8 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background-color: #e7f3ff; 
+}
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -173,7 +174,9 @@ svg {
   vertical-align: middle; }
 
 table {
-  border-collapse: collapse; }
+  border-collapse: collapse; 
+  box-shadow: -3px 3px 10px 3px rgb(17 132 182 / 28%);
+}
 
 caption {
   padding-top: 0.75rem;
