--- a/public/css/landingpage.css
+++ b/public/css/landingpage.css
@@ -204,13 +204,22 @@ body {
     line-height: var(--bs-body-line-height);
     color: var(--bs-body-color);
     text-align: var(--bs-body-text-align);
-    background-color: var(--bs-body-bg);
-    -webkit-text-size-adjust: 100%;
-    -webkit-tap-highlight-color: transparent;
     background-image: url(../../image/bg_landing.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    position: relative; /* Tambahkan properti ini agar child absolute dapat diatur terhadap body */
+}
+
+/* Tambahkan elemen overlay dengan opacity */
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Ubah nilai alpha sesuai keinginan Anda */
 }
 
 .slide-in-from-top {
@@ -299,7 +308,7 @@ footer {
 }
 
 .overlay {
-    background-color: rgba(0, 0, 0, 0.5);
+    /* background-color: rgba(0, 0, 0, 0.5); */
     position: absolute;
     top: 0;
     left: 0;
